--- a/app/public/assets/styles.css
+++ b/app/public/assets/styles.css
@@ -140,7 +140,7 @@ header {
 
 header h1 {
   display: inline-block;
-  margin: 50px 0 0 10px;
+  margin: 50px 0 0 15px;
   text-transform: uppercase;
 }
 
@@ -151,5 +151,15 @@ header h1 {
 */
 
 #app {
-  margin-left: 10px;
+  margin-left: 15px;
+}
+
+/*
+  ========================================
+  1-3 COLUMN
+  ========================================
+*/
+
+.rep-item {
+  word-wrap: break-word;
 }
